2013-04-27  Paul Smith  <psmith@gnu.org>

	* load.c (load_object): Extract all POSIX-isms into a separate
	function for portability.
	(load_file): Check the .LOADED variable first and don't invoke
	load_object() if it's already been loaded.

2013-04-27  Eli Zaretskii  <eliz@gnu.org>

	* read.c (record_files): Pay attention to .ONESHELL in MS-Windows.

	* job.c (construct_command_argv_internal): Support .ONESHELL on
	MS-Windows, when the shell is not a Unixy shell.

2013-04-27  Eli Zaretskii  <eliz@gnu.org>

	* job.c: Fix compilation error on GNU/Linux due to "label at end
	of compound statement".

2013-04-27  Frank Heckenbach <f.heckenbach@fh-soft.de>  (tiny change)

	* job.c (sync_output): Don't discard the output if
	acquire_semaphore fails; instead, dump the output unsynchronized.

2013-04-27  Eli Zaretskii  <eliz@gnu.org>

	Support --output-sync on MS-Windows.
	* w32/compat/posixfcn.c: New file, with emulations of Posix
	functions and Posix functionality for MS-Windows.

	* w32/subproc/sub_proc.c: Include io.h.
	(process_noinherit): New function, forces a file descriptor to not
	be inherited by child processes.
	(process_easy): Accept two additional arguments, and use them to
	set up the standard output and standard error handles of the child
	process.

	* w32/include/sub_proc.h (process_easy): Adjust prototype.
	(process_noinherit): Add prototype.

	* read.c [WINDOWS32]: Include windows.h and sub_proc.h.

	* makeint.h (LOCALEDIR) [WINDOWS32}: Define to NULL if not
	defined.  This is needed because the MS-Windows build doesn't have
	a canonical place for LOCALEDIR.
	(WIN32_LEAN_AND_MEAN) [WINDOWS32]: Define, to avoid getting from
	windows.h header too much stuff that could conflict with the code.

	* main.c <sync_mutex>: New static variable.
	<switches>: Add support for "--sync-mutex" switch.
	(decode_output_sync_flags): Decode the --sync-mutex= switch.
	(prepare_mutex_handle_string) [WINDOWS32]: New function.
	(main): Add "output-sync" to .FEATURES.
